tests/snapshots/flow_demo__flow_get_users_active_renders_expected_mermaid_flowchart.snap
---
source: tests/flow_demo.rs
expression: stdout
---
```mermaid
flowchart TD
    n0["UserController#findActive()"]
    n1["UserService#findActive()"]
    n0 --> n1
    n2["UserRepository#findAll() - external (Spring Data JPA)"]
    n1 --> n2
    n3["ArrayList#<init>() - external (JDK library)"]
    n1 --> n3
    n4["loop for-each User user : users (0..n)"]
    n1 --> n4
    n5["User#getActive()"]
    n4 -->|"body"| n5
    n6["Boolean#equals(_) - external (JDK library)"]
    n4 -->|"body"| n6
    n7{"if Boolean.TRUE.equals(user.getActive())"}
    n4 -->|"body"| n7
    n8["UserService#toResponse(User)"]
    n7 -->|"then"| n8
    n9["User#getId()"]
    n8 --> n9
    n10["User#getName()"]
    n8 --> n10
    n11["User#getEmail()"]
    n8 --> n11
    n12["User#getAge()"]
    n8 --> n12
    n13["User#getActive()"]
    n8 --> n13
    n14["UserResponse#<init>(Long, String, String, Integer, Boolean)"]
    n8 --> n14
    n15["List#add(_) - external (JDK library)"]
    n7 -->|"then"| n15
    n16["List#forEach(Consumer) - control flow (traversal)"]
    n1 --> n16
    n17["loop forEach List.forEach (0..n)"]
    n16 --> n17
    n18["method ref: this::requireResponseEmail"]
    n17 -->|"body"| n18
    n19["UserService#requireResponseEmail(UserResponse)"]
    n18 --> n19
    n20["UserResponse#getEmail()"]
    n19 --> n20
    n21{"if response.getEmail() == null"}
    n19 --> n21
    n22["IllegalStateException#<init>(_) - external (JDK library)"]
    n21 -->|"then terminates"| n22
    %% Notes:
    %% - Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
    %% - Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
    %% - Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
    %% - AOP, @Transactional, @ControllerAdvice, DI qualifiers, Lombok, and Bean Validation are not modeled.
```
