tests/snapshots/flow_demo__flow_get_users_by_id_renders_expected_json.snap
---
source: tests/flow_demo.rs
expression: stdout
---
{
  "endpoint": {
    "verb": "GET",
    "path": "/users/{id}"
  },
  "controller": {
    "method": "com.example.demo.controller.UserController#findById(Long)",
    "file": "demo-api/demo/src/main/java/com/example/demo/controller/UserController.java",
    "line": LINE
  },
  "inputs": [
    {
      "name": "id",
      "type": "Long",
      "source": "path"
    }
  ],
  "call_sequence": [
    {
      "type": "call",
      "method": "com.example.demo.service.UserService#findById(Long)",
      "confidence": "resolved",
      "calls": [
        {
          "type": "call",
          "method": "com.example.demo.service.UserService#findUserOrThrow(Long)",
          "confidence": "resolved",
          "scope": "intra-class",
          "calls": [
            {
              "type": "call",
              "method": "Optional#orElseThrow(Supplier)",
              "confidence": "control",
              "control_kind": "optional",
              "inputs": [
                {
                  "type": "call",
                  "method": "com.example.demo.repository.UserRepository#findById(Long)",
                  "confidence": "external",
                  "external_kind": "spring-data",
                  "calls": []
                }
              ],
              "calls": [
                {
                  "type": "branch",
                  "kind": "optional",
                  "condition_src": "optional empty fallback",
                  "arms": [
                    {
                      "label": "present",
                      "terminates": false,
                      "children": []
                    },
                    {
                      "label": "empty",
                      "terminates": true,
                      "children": [
                        {
                          "type": "lambda",
                          "kind": "lambda",
                          "source": "() -> new BusinessException(ErrorCode.USER_NOT_FOUND)",
                          "children": [
                            {
                              "type": "call",
                              "method": "com.example.demo.exception.BusinessException#<init>(ErrorCode)",
                              "confidence": "resolved",
                              "calls": [
                                {
                                  "type": "call",
                                  "method": "com.example.demo.exception.ErrorCode#getDefaultMessage()",
                                  "confidence": "resolved",
                                  "calls": []
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        },
        {
          "type": "call",
          "method": "com.example.demo.service.UserService#toResponse(User)",
          "confidence": "resolved",
          "scope": "intra-class",
          "calls": [
            {
              "type": "call",
              "method": "com.example.demo.dto.UserResponse#<init>(Long, String, String, Integer, Boolean)",
              "confidence": "resolved",
              "inputs": [
                {
                  "type": "call",
                  "method": "com.example.demo.entity.User#getId()",
                  "confidence": "resolved",
                  "calls": []
                },
                {
                  "type": "call",
                  "method": "com.example.demo.entity.User#getName()",
                  "confidence": "resolved",
                  "calls": []
                },
                {
                  "type": "call",
                  "method": "com.example.demo.entity.User#getEmail()",
                  "confidence": "resolved",
                  "calls": []
                },
                {
                  "type": "call",
                  "method": "com.example.demo.entity.User#getAge()",
                  "confidence": "resolved",
                  "calls": []
                },
                {
                  "type": "call",
                  "method": "com.example.demo.entity.User#getActive()",
                  "confidence": "resolved",
                  "calls": []
                }
              ],
              "calls": []
            }
          ]
        }
      ]
    }
  ],
  "unresolved": [],
  "notes": [
    "Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.",
    "Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.",
    "Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.",
    "AOP, @Transactional, @ControllerAdvice, DI qualifiers, Lombok, and Bean Validation are not modeled."
  ]
}
